--- a/Web/src/styles/_variables.scss
+++ b/Web/src/styles/_variables.scss
@@ -134,6 +134,7 @@ $menu-toggle-bar-height: 5px;
 $padding-default: 2rem;
 $padding-medium: 1.5rem;
 $padding-small: 1rem;
+$padding-large: 50px; 
 $gap-default: 1.5rem;
 $gap-small: 0.5rem;
 $button-padding: 0.5rem 1rem;
