--- a/Web/src/styles/_user-reviews.scss
+++ b/Web/src/styles/_user-reviews.scss
@@ -21,7 +21,7 @@
 /* Estilo base para el texto de las reseñas */
 %review-text {
   font-size: $font-size-small; /* Tamaño de fuente pequeño */
-  color: $neutral-color1; /* Color del texto */
+  color: $main-color; /* Color del texto */
   margin-bottom: $footer-gap; /* Espaciado en la parte inferior */
   line-height: 1.5; /* Espaciado entre líneas */
   font-family: $secondary-font-family; /* Fuente secundaria */
