--- a/Web/src/styles/_variables.scss
+++ b/Web/src/styles/_variables.scss
@@ -198,5 +198,8 @@ $share-carousel-btn-size: 1.5rem;
 
 // Establecer el tamaño de los botones y otros elementos en variables
 $share-font-size-nav: 1rem;
-$share-font-size-header: 2.5rem;  
+$share-font-size-header: 2.5rem;
+
+$touch-target-size: 48px;
+$touch-target-spacing: 8px;
 
